<resources>
    <string name="app_name">AppSkeletonDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_item_1">Menu Item 1</string>
    <string name="menu_item_2">Menu Item 2</string>
    <string name="menu_item_2_1">Submenu Item 1</string>
    <string name="menu_item_2_2">Submenu Item 2</string>
    <string name="menu_item_3">Menu Item 3</string>
    <string name="menu_item_4">Test MVVM</string>
    <string name="menu_item_5">Test Dagger</string>
    <string name="menu_item_6">Custom View Activity</string>
    <string name="menu_item_preferences">Preferences</string>

    <string name="menu_context_item_1">Context Item 1</string>
    <string name="menu_context_item_2">Context Item 2</string>
    <string name="menu_context_item_2_1">Subcontext Item 1</string>
    <string name="menu_context_item_2_2">Subcontext Item 2</string>

    <string name="button_fragment_1">Show fragment 1</string>
    <string name="button_fragment_2">Show fragment 2</string>
    <string name="button_fragment_3">Show fragment 3</string>

    <string name="title_fragment_1">Test Fragment 1</string>
    <string name="title_fragment_2">Test Fragment 2</string>
    <string name="title_fragment_3">Test Fragment 3</string>
    <string name="title_fragment_view_model">Test Fragment ViewModel</string>
    <string name="title_fragment_dagger">Test Fragment Dagger</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="label_nested_1">Custom state of nested fragment 1:</string>
    <string name="label_nested_2">Lifecycle state of nested fragment 2:</string>
    <string name="description_nested">This fragment shows how we can nest fragments using FragmentManager and monitor their custom or lifecycle state</string>
    <string name="description_simple">This fragment demonstrates how we can use FragmentManager to show single simple fragment</string>
    <string name="description_using_data">In this fragment we use data bundle provided in BaseFragment to keep fragment state</string>
    <string name="description_using_viewmodel">This fragments shows how to use architecture components viewmodel</string>
    <string name="description_using_dagger">This fragments shows how to use dependency injection with dagger</string>
    <string name="data">Data:</string>
</resources>
