<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_1"
        android:checkable="true"
        android:title="@string/menu_item_1" />

    <item
        android:id="@+id/menu_item_2"
        android:checkable="true"
        android:title="@string/menu_item_2" />

    <item
        android:id="@+id/menu_item_3"
        android:checkable="true"
        android:title="@string/menu_item_3" />

    <item
        android:id="@+id/menu_item_4"
        android:checkable="true"
        android:title="@string/menu_item_4" />

    <item
        android:id="@+id/menu_item_5"
        android:checkable="true"
        android:title="@string/menu_item_5" />

    <item
        android:id="@+id/menu_item_6"
        android:checkable="true"
        android:title="@string/menu_item_6" />

    <item
        android:id="@+id/menu_item_preferences"
        android:checkable="true"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_item_preferences" />
</menu>